OLMIS-1805: change date filter in requisition screens

--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -24,9 +24,9 @@
                     <td>{{requisition.facility.code}}</th>
                     <td>{{requisition.facility.name}}</th>
                     <td>{{requisition.facility.type.name}}</th>
-                    <td>{{requisition.processingPeriod.startDate | date:'shortDate'}}</th>
-                    <td>{{requisition.processingPeriod.endDate | date:'shortDate'}}</th>
-                    <td>{{requisition.statusChanges.SUBMITTED.changeDate | date:'shortDate'}}</th>
+                    <td>{{requisition.processingPeriod.startDate | date:'dd/MM/yyyy'}}</th>
+                    <td>{{requisition.processingPeriod.endDate | date:'dd/MM/yyyy'}}</th>
+                    <td>{{requisition.statusChanges.SUBMITTED.changeDate | date:'dd/MM/yyyy'}}</th>
                     <td class="col-emergency">
                         <span ng-if="requisition.emergency" class="icon-ok"></span>
                     </td>
