OLMIS-308: Adjust reports ui for api-based parameters

--- a/src/main/webapp/report/report-options.html
+++ b/src/main/webapp/report/report-options.html
@@ -10,10 +10,10 @@
                 </select>
             </div>
             <div class="button-group">
-                <button class="primary" openlmis-download="{{vm.getReportUrl('pdf')}}" target="_blank">{{'button.report.pdf' | message}}</a>
-                <button class="primary" openlmis-download="{{vm.getReportUrl('csv')}}" target="_blank">{{'button.report.csv' | message}}</a>
-                <button openlmis-download="{{vm.getReportUrl('xls')}}" target="_blank">{{'button.report.xls' | message}}</a>
-                <button openlmis-download="{{vm.getReportUrl('html')}}" target="_blank">{{'button.report.html' | message}}</a>
+                <button class="primary" openlmis-download="{{vm.getReportUrl('pdf')}}" target="_blank">{{'button.report.pdf' | message}}</button>
+                <button class="primary" openlmis-download="{{vm.getReportUrl('csv')}}" target="_blank">{{'button.report.csv' | message}}</button>
+                <button openlmis-download="{{vm.getReportUrl('xls')}}" target="_blank">{{'button.report.xls' | message}}</button>
+                <button openlmis-download="{{vm.getReportUrl('html')}}" target="_blank">{{'button.report.html' | message}}</button>
             </div>
         </div>
     </section>
