--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
     <title>@@APPLICATION_TITLE</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="openlmis.css">
-    <script type="text/javascript" src="openlmis.js"></script>
+    <script type="text/javascript" src="openlmis.js" async="true"></script>
     <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -23,10 +23,16 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     </script>
+    <script>
+      function hideLoadingModal() {
+          document.getElementById("loading-modal").style.display = 'none';
+      }
+    </script>
     <!-- End Google Analytics -->
 
   </head>
-  <body >
+  <body onload="hideLoadingModal()">
+    <div id="loading-modal" class="no-js-loading-modal"></div>
     <header ng-if="userIsAuthenticated">
       <div ng-include="'openlmis-header/header.html'" offline ng-class="{'isOffline':isOffline}" ></div>
       <div class="navbar">
