OLMIS-1962: added emergency false flag when searching for regular requisitions on init screen

--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -79,7 +79,7 @@
                         <td class="sticky">
                             <input id="proceedButton" type="button" ng-click="vm.initRnr(period)"
                                    value="{{'button.proceed'| message}}" class="primary"
-                                   ng-show="period.activeForRnr"/>
+                                   ng-if="period.activeForRnr"/>
                         </td>
                     </tr>
                 </tbody>
