--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -8,11 +8,10 @@
             <thead>
                 <tr>
                     <th>{{'program.header' | message}}</th>
-                    <th>{{'option.value.facility.code' | message}}</th>
-                    <th>{{'option.value.facility.name' | message}}</th>
-                    <th>{{'option.value.facility.type' | message}}</th>
-                    <th>{{'label.period.start.date' | message}}</th>
-                    <th>{{'label.period.end.date' | message}}</th>
+                    <th>{{'label.facility' | message}}</th>
+                    <th>{{'label.period' | message}}</th>
+                    <th>{{'label.startDate' | message}}</th>
+                    <th>{{'label.endDate' | message}}</th>
                     <th>{{'label.date.submitted' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
                     <th class="sticky"></th>
@@ -21,9 +20,8 @@
             <tbody>
                 <tr ng-repeat="requisition in vm.requisitions">
                     <td>{{requisition.program.name}}</th>
-                    <td>{{requisition.facility.code}}</th>
-                    <td>{{requisition.facility.name}}</th>
-                    <td>{{requisition.facility.type.name}}</th>
+                    <td>{{requisition.facility.code}} - {{requisition.facility.name}}</th>
+                    <td>{{requisition.processingPeriod.name}}</th>
                     <td>{{requisition.processingPeriod.startDate | date:'dd/MM/yyyy'}}</th>
                     <td>{{requisition.processingPeriod.endDate | date:'dd/MM/yyyy'}}</th>
                     <td>{{requisition.statusChanges.SUBMITTED.changeDate | date:'dd/MM/yyyy'}}</th>
