--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -18,11 +18,11 @@
 									   ng-change="vm.toggleSelectAll(vm.selectAll)">
 							</th>
 							<th>{{'program.header' | message}}</th>
-							<th>{{'option.value.facility.code' | message}}</th>
-							<th>{{'option.value.facility.name' | message}}</th>
+							<th>{{'label.facility' | message}}</th>
 							<th>{{'option.value.facility.district' | message}}</th>
-							<th>{{'label.period.start.date' | message}}</th>
-							<th>{{'label.period.end.date' | message}}</th>
+							<th>{{'label.period' | message}}</th>
+							<th>{{'label.startDate' | message}}</th>
+							<th>{{'label.endDate' | message}}</th>
 							<th>{{'label.date.approved' | message}}</th>
 							<th>{{'label.supplyingDepot' | message}}</th>
 							<th>{{'label.emergency' | message}}</th>
@@ -35,9 +35,9 @@
 									   ng-change="vm.setSelectAll()">
 							</td>
 							<td>{{item.requisition.program.name}}</td>
-							<td>{{item.requisition.facility.code}}</td>
-							<td>{{item.requisition.facility.name}}</td>
+							<td>{{item.requisition.facility.code}} - {{item.requisition.facility.name}}</td>
 							<td>{{item.requisition.facility.geographicZone.parent.name}}</td>
+							<td>{{item.requisition.processingPeriod.name}}</td>
 							<td>{{item.requisition.processingPeriod.startDate | date:'dd/MM/yyyy'}}</td>
 							<td>{{item.requisition.processingPeriod.endDate | date:'dd/MM/yyyy'}}</td>
 							<td>{{item.requisition.statusChanges.APPROVED.changeDate | date:'dd/MM/yyyy'}}</td>
