--- a/src/main/webapp/openlmis-header/header.html
+++ b/src/main/webapp/openlmis-header/header.html
@@ -1,10 +1,11 @@
-<div ng-controller="HeaderController">
-    <div class="logo">
-        <img src="images/logo.png"/>
-        <h1>{{'label.app.header' | message}}</h1>
-    </div>
-    <div class="status">
-        <a offline ng-show="isOffline" class="status status-offline" ng-click="checkConnection()">{{'msg.requisition.view.offline' | message }}</a>
+<div ng-controller="HeaderController" class="openlmis-header" ng-class="{'is-offline':isOffline}" offline>
+    <img class="openlmis-logo" src="images/logo.png"/>
+    <h1 class="openlmis-title">{{'label.app.header' | message}}</h1>
+    <div class="openlmis-header-actions">
+        <div class="status-offline" ng-if="isOffline">
+            <span class="offline-status-indicator">{{'msg.youAreOffline' | message}}</span>
+            <button class="primary" ng-click="checkConnection()">{{'button.checkConnection' | message}}</button>
+        </div>
         <div ng-show="!!user">
             <ng-include src="'openlmis-header/user.html'"></ng-include>
         </div>
