--- a/src/main/webapp/requisition-search/requisition-search.html
+++ b/src/main/webapp/requisition-search/requisition-search.html
@@ -7,17 +7,17 @@
         <form class="openlmis-table-filters" ng-submit="vm.search()">
             <label for="facility">{{'label.requisition.facilityName' | message}}</label>
             <select id="facility" placeholder="{{'label.select.facility' | message}}"
-                    ng-change="vm.loadPrograms()" ng-model="vm.selectedFacility"
+                    ng-model="vm.selectedFacility"
                     ng-options="facility as facility.name for facility in vm.facilities"
                     required>
             </select>
             <label for=program>{{'label.program' | message}}</label>
             <select id="program" placeholder="{{'label.select.program' | message}}" ng-required
-                    ng-options="program as program.name for program in vm.programs"
+                    ng-options="program as program.name for program in vm.selectedFacility.supportedPrograms"
                     ng-model="vm.selectedProgram">
             </select>
             <label class="checkbox">
-                <input id="offlineSearch" type="checkbox" ng-model="vm.searchOffline"
+                <input id="offlineSearch" type="checkbox" ng-model="vm.stateParams.offline"
                        ng-disabled="vm.isOfflineDisabled()"/>
                 {{'msg.requisition.view.offline' | message}}
             </label>
@@ -30,51 +30,65 @@
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search' | message}}"/>
         </form>
-        <table class="openlmis-table" ng-if="vm.requisitionList">
-            <caption ng-if="!vm.requisitionList.length">
-                {{'msg.no.requisitions.found' | message}}
-            </caption>
-            <thead>
-                <tr>
-                    <th>{{'program.header' | message}}</th>
-                    <th>{{'label.facility' | message}}</th>
-                    <th>{{'label.period' | message}}</th>
-                    <th>{{'label.startDate' | message}}</th>
-                    <th>{{'label.endDate' | message}}</th>
-                    <th>{{'label.date.submitted' | message}}</th>
-                    <th>{{'label.date.authorized' | message}}</th>
-                    <th>{{'label.date.approved' | message}}</th>
-                    <th>{{'label.status' | message}}</th>
-                    <th>{{'label.emergency' | message}}</th>
-                    <th>{{'msg.requisition.view.offline' | message}}</th>
-                    <th>{{'label.actions'| message}}</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="requisition in vm.requisitionList">
-                    <td>{{requisition.program.name}}</td>
-                    <td>{{requisition.facility.code}} - {{requisition.facility.name}}</th>
-                    <td>{{requisition.processingPeriod.name}}</td>
-                    <td>{{requisition.processingPeriod.startDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{requisition.processingPeriod.endDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{requisition.statusChanges.SUBMITTED.changeDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{requisition.statusChanges.AUTHORIZED.changeDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{requisition.statusChanges.APPROVED.changeDate | date:'dd/MM/yyyy'}}</td>
-                    <td>{{requisition.status}}</td>
-                    <td class="col-emergency">
-                        <i ng-class="{'icon-ok': requisition.emergency}"></i>
-                    </td>
-                    <td class="col-emergency">
-                        <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
-                    </td>
-                    <td>
-                        <button class="primary" ng-click="vm.openRnr(requisition.id)">{{'button.viewRequisition' | message}}</button>
-                        <button class="danger" ng-if="requisition.$availableOffline"
-                            ng-click="vm.removeOfflineRequisition(requisition)">{{'button.removeOfflineRequisition' | message}}
-                        </button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="openlmis-table">
+            <table>
+                <caption ng-if="!vm.items.length">
+                    {{'msg.no.requisitions.found' | message}}
+                </caption>
+                <caption ng-if="!vm.facilities.length">
+                    {{'msg.facilities.not.found' | message}}
+                </caption>
+                <caption ng-if="vm.selectedFacility && !vm.selectedFacility.supportedPrograms">
+                    {{'msg.no.program.available' | message}}
+                </caption>
+                <thead>
+                    <tr>
+                        <th>{{'program.header' | message}}</th>
+                        <th>{{'label.facility' | message}}</th>
+                        <th>{{'label.period' | message}}</th>
+                        <th>{{'label.startDate' | message}}</th>
+                        <th>{{'label.endDate' | message}}</th>
+                        <th>{{'label.date.submitted' | message}}</th>
+                        <th>{{'label.date.authorized' | message}}</th>
+                        <th>{{'label.date.approved' | message}}</th>
+                        <th>{{'label.status' | message}}</th>
+                        <th>{{'label.emergency' | message}}</th>
+                        <th>{{'msg.requisition.view.offline' | message}}</th>
+                        <th>{{'label.actions'| message}}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="requisition in vm.items">
+                        <td>{{requisition.program.name}}</td>
+                        <td>{{requisition.facility.code}} - {{requisition.facility.name}}</th>
+                        <td>{{requisition.processingPeriod.name}}</td>
+                        <td>{{requisition.processingPeriod.startDate | date:'dd/MM/yyyy'}}</td>
+                        <td>{{requisition.processingPeriod.endDate | date:'dd/MM/yyyy'}}</td>
+                        <td>{{requisition.statusChanges.SUBMITTED.changeDate | date:'dd/MM/yyyy'}}</td>
+                        <td>{{requisition.statusChanges.AUTHORIZED.changeDate | date:'dd/MM/yyyy'}}</td>
+                        <td>{{requisition.statusChanges.APPROVED.changeDate | date:'dd/MM/yyyy'}}</td>
+                        <td>{{requisition.status}}</td>
+                        <td class="col-emergency">
+                            <i ng-class="{'icon-ok': requisition.emergency}"></i>
+                        </td>
+                        <td class="col-emergency">
+                            <i ng-class="{'icon-ok': requisition.$availableOffline}"></i>
+                        </td>
+                        <td>
+                            <button class="primary" ng-click="vm.openRnr(requisition.id)">{{'button.viewRequisition' | message}}</button>
+                            <button class="danger" ng-if="requisition.$availableOffline"
+                                ng-click="vm.removeOfflineRequisition(requisition)">{{'button.removeOfflineRequisition' | message}}
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <openlmis-pagination ng-model="vm.stateParams.page"
+                ng-change="vm.changePage()"
+                total-items="vm.totalItems"
+                items="vm.pageItems.length"
+                page-size="vm.stateParams.size">
+            </openlmis-pagination>
+        </div>
     </section>
 </div>
