OLMIS-1808: Standarized table markup & disabled stuck-right
- Removed .openlmis-table markup as it didn't add much
- made openlis-table directive act on openlmis-table-container
- changed small measurements in openlmis sticky column calculations

--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -1,7 +1,7 @@
 <div class="page">
     <h2>{{'label.approve.requisitions' | message}}</h2>
     <div class="openlmis-table-container">
-        <table class="openlmis-table" ng-if="vm.requisitions">
+        <table ng-if="vm.requisitions">
             <caption ng-if="!vm.requisitions.length">
                 {{'message.no.rnr.pending.approval' | message}}
             </caption>
