--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -3,23 +3,21 @@
 		<button ng-if="!vm.skippedAll" ng-click="vm.skipAll()">{{'requisition.lineItem.skip.all' | message}}</button>
 		<button ng-if="vm.skippedAll" ng-click="vm.unskipAll()">{{'requisition.lineItem.skip.none' | message}}</button>
 	</div>
-	<div class="openlmis-table">
-		<table table-pinned-columns>
-			<thead>
-				<tr>
-					<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
-					</th>
-				</tr>
-			</thead>
-			<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
-				<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
-					ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
-					<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
-						product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
+	<table>
+		<thead>
+			<tr>
+				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
+				</th>
+			</tr>
+		</thead>
+		<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.pageItems | groupBy:'$program.orderableCategoryDisplayName'">
+			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem), 'skipped-line-item' : lineItem.skipped}"
+				ng-repeat="lineItem in lineItems | orderBy : '$program.displayOrder'">
+				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'"
+					product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
+			</tr>
+		</tbody>
+	</table>
 </div>
 <openlmis-pagination ng-model="vm.stateParams.page" total-items="vm.totalItems" items="vm.pageItems.length"
 					 page-size="vm.stateParams.size" ng-change="vm.changePage()" page-validator="vm.isPageValid">
