--- a/src/main/webapp/openlmis-form/datepicker.html
+++ b/src/main/webapp/openlmis-form/datepicker.html
@@ -1,5 +1,6 @@
 <div class="olmis-datepicker">
     <i class="glyphicon glyphicon-calendar olmis-datepicker-icon"></i>
     <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
-        data-container="body" data-autoclose="0" data-date-format="dd/MM/yy" bs-datepicker/>
+        data-container="body" data-autoclose="0" data-date-format="dd/MM/yy"
+        data-min-date="{{minDate}}" data-max-date="{{maxDate}}" bs-datepicker/>
 </div>
