OLMIS-1808: Moved tables so they align with styleguide

--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -67,7 +67,7 @@
                         <th>{{'period.header.startDate' | message}}</th>
                         <th>{{'period.header.endDate' | message}}</th>
                         <th>{{'label.rnr.status' | message}}</th>
-                        <th class="sticky"></th>
+                        <th class="sticky">{{'label.actions' | message}}</th>
                     </tr>
                 </thead>
                 <tbody>
