--- a/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
+++ b/src/main/webapp/proof-of-delivery-manage/proof-of-delivery-manage.html
@@ -45,7 +45,7 @@
             </fieldset>
             <input type="submit" value="{{'button.search'|message}}"/>
         </form>
-        <table class="openlmis-table" ng-if="vm.orders">
+        <table>
             <caption ng-if="vm.orders && !vm.orders.length">
                 {{'msg.noPodsFound' | message}}
             </caption>
@@ -66,7 +66,7 @@
                     <th>{{'label.endDate' | message}}</th>
                     <th>{{'label.orderDate' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
-                    <th>{{'label.actions' | message}}</th>
+                    <th class="sticky">{{'label.actions' | message}}</th>
                 </tr>
             </thead>
             <tbody>
@@ -82,7 +82,7 @@
                     <td class="col-emergency">
                         <i ng-class="{'icon-ok': order.emergency}"></i>
                     </td>
-                    <td>
+                    <td class="sticky">
                         <button class="primary" ng-click="vm.openPod(order.id)">{{'button.viewOrder' | message}}</button>
                     </td>
                 </tr>
