--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -1,7 +1,7 @@
 <div class="page">
     <h2>{{'label.approve.requisitions' | message}}</h2>
     <div class="openlmis-table-container">
-        <table ng-if="vm.requisitions">
+        <table>
             <caption ng-if="!vm.requisitions.length">
                 {{'message.no.rnr.pending.approval' | message}}
             </caption>
@@ -14,7 +14,7 @@
                     <th>{{'label.endDate' | message}}</th>
                     <th>{{'label.date.submitted' | message}}</th>
                     <th>{{'label.emergency' | message}}</th>
-                    <th class="sticky"></th>
+                    <th class="sticky">{{'label.actions' | message}}</th>
                 </tr>
             </thead>
             <tbody>
